--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -10,8 +10,9 @@
     <header class='header'>
         <ul class='header-links'>
             <a href="{% url 'home-page' %}">Home</a>
+            <a href="{% url 'categories-form' %}">Cadastrar Categorias</a>
         </ul>
     </header>
-    {% block content %} {% endblock %}    
+    {% block content %}{% endblock %}    
 </body>
 </html>
