--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -11,8 +11,11 @@
         <ul class='header-links'>
             <a href="{% url 'home-page' %}">Home</a>
             <a href="{% url 'categories-form' %}">Cadastrar Categorias</a>
+            <a href="{% url 'news-form' %}">Cadastrar Notícias</a>
         </ul>
     </header>
-    {% block content %}{% endblock %}    
+    <div class='news-container'>
+        {% block content %}{% endblock %}    
+    </div>
 </body>
 </html>
