--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -8,7 +8,7 @@
 {% block content %}
     {% for item in news %}
     <a href="{% url 'news-details-page' item.id %}"> 
-        <div>
+        <div class='news-card'>
             <h2 class="news-title">{{item.title}}</h2>
             <span class="news-date">{{item.created_at|date:"d/m/Y"}}</span>
             <img src="{% static item.image.url %}">
