--- a/news/static/css/style.css
+++ b/news/static/css/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
     align-items: center;
-    background-color: rgb(27,26,28);
+    background-color: rgb(0 1 234 / 40%);
     display: flex;
     flex-direction: column;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -74,7 +74,8 @@ nav {
     justify-content: space-around;
     margin: 10px 0;
     text-align: center;
-    width: 27%;
+    padding: 8px;
+    width: 340px;
 }
 
 .news-card:hover {
@@ -84,7 +85,7 @@ nav {
 .news-card img {
     margin-top: 10px;
     max-height: 50%;
-    width: 50%;
+    width: 250px;
 }
 
 .news-detail > .news-title {
@@ -265,4 +266,10 @@ news-date {
     border-radius: 5px;
     padding: 10px;
     width: 60%;
+}
+
+.news-image {
+    border-radius: 10px;
+    margin: 10px 0;
+    width: 100%;
 }
