--- a/news/templates/news_form.html
+++ b/news/templates/news_form.html
@@ -8,7 +8,7 @@
 {% block content %}
     <form method='post' action="{% url 'news-form' %}" enctype='multipart/form-data'>
         {% csrf_token %}
-        {{form.as_p}}
+        {{form.as_div}}
         <button type='submit'>Salvar</button>
     </form>
 {% endblock %}
